--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,9 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:22.2.1'
+    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.facebook.android:facebook-android-sdk:4.7.0'
+    compile 'com.parse.bolts:bolts-android:1.2.1'
+    compile 'com.parse:parse-android:1.10.3'
+    compile fileTree(dir: 'libs', include: 'Parse-*.jar')
 }
