Adding Welcome screen, Sign In screen, temp location service structure

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,6 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:4.7.0'
     compile 'com.parse.bolts:bolts-android:1.2.1'
     compile 'com.parse:parse-android:1.10.3'
+    compile 'com.google.android.gms:play-services:7.5.0'
     compile fileTree(dir: 'libs', include: 'Parse-*.jar')
 }
