--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:name=".MainApplication"
@@ -12,15 +14,18 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.SplashScreen">
+        <activity
+            android:name=".activities.SplashScreen"
+            android:theme="@style/AppThemeNoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.SignUpScreen"></activity>
-
+        <activity
+            android:name=".activities.SignUpScreen"
+            android:theme="@style/AppThemeNoActionBar" />
         <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
@@ -31,8 +36,14 @@
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
 
+        <activity
+            android:name=".activities.SignInScreen"
+            android:label="@string/title_activity_sign_in_screen"
+            android:theme="@style/AppThemeNoActionBar" />
+        <activity
+            android:name=".activities.WelcomeScreen"
+            android:label="@string/title_activity_welcome_screen"
+            android:theme="@style/AppThemeNoActionBar" />
     </application>
-
-
 
 </manifest>
