--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".activities.SplashScreen"
+            android:screenOrientation="portrait"
             android:theme="@style/AppThemeNoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,6 +26,7 @@
         </activity>
         <activity
             android:name=".activities.SignUpScreen"
+            android:screenOrientation="portrait"
             android:theme="@style/AppThemeNoActionBar" />
         <activity
             android:name="com.facebook.FacebookActivity"
@@ -38,10 +40,12 @@
 
         <activity
             android:name=".activities.SignInScreen"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_sign_in_screen"
             android:theme="@style/AppThemeNoActionBar" />
         <activity
             android:name=".activities.WelcomeScreen"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_welcome_screen"
             android:theme="@style/AppThemeNoActionBar" />
     </application>
