1) Sign in and Sign up with both parse and Facebook 2) Flow of sign in and sign up 3) Welcome screen 4) Partial Create team screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.kavin.socialevening">
+    package="com.kavin.socialevening" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -13,11 +13,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".activities.SplashScreen"
             android:screenOrientation="portrait"
-            android:theme="@style/AppThemeNoActionBar">
+            android:theme="@style/AppThemeNoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -40,14 +40,16 @@
 
         <activity
             android:name=".activities.SignInScreen"
-            android:screenOrientation="portrait"
             android:label="@string/title_activity_sign_in_screen"
+            android:screenOrientation="portrait"
             android:theme="@style/AppThemeNoActionBar" />
         <activity
             android:name=".activities.WelcomeScreen"
-            android:screenOrientation="portrait"
             android:label="@string/title_activity_welcome_screen"
+            android:screenOrientation="portrait"
             android:theme="@style/AppThemeNoActionBar" />
+        <activity android:name=".activities.CreateTeamScreen" >
+        </activity>
     </application>
 
 </manifest>
