--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,8 +6,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
@@ -15,10 +15,13 @@
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <permission android:protectionLevel="signature"
-        android:name="com.kavin.socialevening.permission.C2D_MESSAGE" />
+    <permission
+        android:name="com.kavin.socialevening.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+
     <uses-permission android:name="com.kavin.socialevening.permission.C2D_MESSAGE" />
 
     <application
@@ -69,7 +72,7 @@
         <service android:name="com.parse.PushService" />
 
         <receiver
-            android:name="com.kavin.socialevening.push.PushNotificationReceiver"
+            android:name=".push.PushNotificationReceiver"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.parse.push.intent.RECEIVE" />
@@ -87,6 +90,11 @@
                 <category android:name="com.kavin.socialevening" />
             </intent-filter>
         </receiver>
+
+        <activity
+            android:name=".activities.PickContactScreen"
+            android:screenOrientation="portrait"
+            android:theme="@style/TextToolbar"/>
     </application>
 
 </manifest>
