1) Upload image to parse 2) Create team

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,6 +67,7 @@
             android:theme="@style/AppThemeNoActionBar" />
         <activity
             android:name=".activities.CreateTeamScreen"
+            android:theme="@style/TextToolbar"
             android:screenOrientation="portrait" />
 
         <service android:name="com.parse.PushService" />
