--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,14 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+
+    maven {
+        url "https://mint.splunk.com/gradle/"
+    }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
@@ -29,5 +37,6 @@ dependencies {
     compile 'com.parse.bolts:bolts-android:1.2.1'
     compile 'com.parse:parse-android:1.10.3'
     compile 'com.google.android.gms:play-services:7.5.0'
+    compile 'com.splunk.mint:mint:4.3.0'
     compile fileTree(dir: 'libs', include: 'Parse-*.jar')
 }
