1) Home screen tab design 2) Setting dark color for status bar

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -18,6 +19,7 @@ android {
         }
     }
 }
+
 
 repositories {
     mavenCentral()
@@ -37,6 +39,7 @@ dependencies {
     compile 'com.parse.bolts:bolts-android:1.2.1'
     compile 'com.parse:parse-android:1.10.3'
     compile 'com.google.android.gms:play-services:7.5.0'
+    compile 'com.android.support:design:22.2.1'
     compile 'com.splunk.mint:mint:4.3.0'
     compile fileTree(dir: 'libs', include: 'Parse-*.jar')
 }
