1) Near by teams 2) Challenges skleton

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -101,6 +101,8 @@
             android:screenOrientation="portrait" />
         <activity android:name=".activities.TeamInfoActivity" >
         </activity>
+        <activity android:name=".activities.ChallengeScreen" >
+        </activity>
     </application>
 
 </manifest>
