--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -103,6 +103,8 @@
         </activity>
         <activity android:name=".activities.ChallengeScreen" >
         </activity>
+        <activity android:name=".activities.RewardActivity" >
+        </activity>
     </application>
 
 </manifest>
