--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.kavin.socialevening" >
+    package="com.kavin.socialevening">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -30,11 +30,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".activities.SplashScreen"
             android:screenOrientation="portrait"
-            android:theme="@style/AppThemeNoActionBar" >
+            android:theme="@style/AppThemeNoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -74,7 +74,7 @@
 
         <receiver
             android:name=".push.PushNotificationReceiver"
-            android:exported="false" >
+            android:exported="false">
             <intent-filter>
                 <action android:name="com.parse.push.intent.RECEIVE" />
                 <action android:name="com.parse.push.intent.DELETE" />
@@ -83,7 +83,7 @@
         </receiver>
         <receiver
             android:name="com.parse.GcmBroadcastReceiver"
-            android:permission="com.google.android.c2dm.permission.SEND" >
+            android:permission="com.google.android.c2dm.permission.SEND">
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
@@ -99,12 +99,18 @@
         <activity
             android:name=".activities.HomeScreen"
             android:screenOrientation="portrait" />
-        <activity android:name=".activities.TeamInfoActivity" >
-        </activity>
-        <activity android:name=".activities.ChallengeScreen" >
-        </activity>
-        <activity android:name=".activities.RewardActivity" >
-        </activity>
+        <activity
+            android:name=".activities.TeamInfoActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.ChallengeScreen"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.RewardActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.IntroScreen"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
