--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,8 +67,7 @@
             android:theme="@style/AppThemeNoActionBar" />
         <activity
             android:name=".activities.CreateTeamScreen"
-            android:screenOrientation="portrait"
-            android:theme="@style/TextToolbar" />
+            android:screenOrientation="portrait"/>
 
         <service android:name="com.parse.PushService" />
 
@@ -94,8 +93,7 @@
 
         <activity
             android:name=".activities.PickContactScreen"
-            android:screenOrientation="portrait"
-            android:theme="@style/TextToolbar" />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.HomeScreen"
             android:screenOrientation="portrait" />
@@ -110,7 +108,10 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".activities.IntroScreen"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.ChallengeInfoScreen"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
